--- a/linkedlist/index.html
+++ b/linkedlist/index.html
@@ -31,16 +31,9 @@
 
 <!-- Page Content -->
 <div class="container">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <img src="brs-logo.png" />
-            </a>
-            <h2 class="fw-light text-center text-lg-start mb-0">BRS Studio - Data Structures | Linked List</h2>
-        </div>
-    </nav>
-
-  <hr class="mt-0 mb-5">
+  <div>
+    <h2 class="fw-light text-center text-lg-start mt-5 mb-5">Data Structures | Linked List</h2>
+  </div>
 
   <div class="row text-center text-lg-start align-items-center">
     <div class="col-lg-3 col-md-4 col-6 text-center">
