--- a/linkedlist/single-linked-list/index.html
+++ b/linkedlist/single-linked-list/index.html
@@ -24,26 +24,8 @@
   </head>
   <body>
     <header>
-      <div class="d-flex bg-gradient">
-        <div class="d-flex flex-grow-1">
-          <nav class="courseTitle">
-            <button class="navbar-brand border-0">
-              <img src="assets/img/logo.png" alt="logo" />
-            </button>
-          </nav>
-          <div class="flex-grow-1">
-            <div class="ReactTitle ps-3 d-flex align-items-center">
-              <img src="assets/img/datastructure.png" alt="logo" />
-              <h3 class="mb-0">Data Structure - Single Linked List in JS</h3>
-            </div>
-            <div class="d-flex ps-3 align-items-center">
-              <div class="flex-grow-1">
-                <h4>Single Linked List </h4>
-                <p class="pb-0 mb-0 text-start">Purpose: Implement Single Linked List  DS</p>
-              </div>
-            </div>
-          </div>
-        </div>
+      <div class="d-flex justify-content-center mt-5">
+        <h4>Single Linked List </h4>
       </div>
     </header>
 
@@ -63,8 +45,7 @@
     </main>
 
     <footer class="footer footer-dark">
-      <div class="d-flex justify-content-between px-5">
-        <div>ALL RIGHTS RESERVED BRS STUDIO, INDIA</div>
+      <div class="d-flex justify-content-center px-5">
         <div>
           <button
             onclick="setTheme('#1A4B84')"
@@ -78,9 +59,6 @@
             onclick="setTheme('#FEAD06')"
             class="theme-switch theme-switch-yellow_sea"
           ></button>
-        </div>
-        <div>
-          <img src="assets/img/footer-logo.png" alt="logo" />
         </div>
       </div>
     </footer>
